// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndexSelector /> should render 1`] = `
<Fragment>
  <label>
    References
  </label>
  <Box__BoxGroup>
    <IndexSelector__StyledIndexSelectorList
      error=""
    >
      <IndexSelectorItem
        id="foo"
        isSelected={true}
        key="foo"
        onSelect={[MockFunction]}
      />
      <IndexSelectorItem
        id="bar"
        isSelected={true}
        key="bar"
        onSelect={[MockFunction]}
      />
      <IndexSelectorItem
        id="baz"
        isSelected={false}
        key="baz"
        onSelect={[MockFunction]}
      />
    </IndexSelector__StyledIndexSelectorList>
  </Box__BoxGroup>
</Fragment>
`;

exports[`<IndexSelector /> should render when [indexes.length = 0] 1`] = `
<Fragment>
  <label>
    References
  </label>
  <NoneFoundBox
    noun="built references"
  />
</Fragment>
`;

exports[`<IndexSelector /> should render with error 1`] = `
<Fragment>
  <label>
    References
  </label>
  <Box__BoxGroup>
    <IndexSelector__StyledIndexSelectorList
      error="Error"
    >
      <IndexSelectorItem
        id="foo"
        isSelected={true}
        key="foo"
        onSelect={[MockFunction]}
      />
      <IndexSelectorItem
        id="bar"
        isSelected={true}
        key="bar"
        onSelect={[MockFunction]}
      />
      <IndexSelectorItem
        id="baz"
        isSelected={false}
        key="baz"
        onSelect={[MockFunction]}
      />
    </IndexSelector__StyledIndexSelectorList>
  </Box__BoxGroup>
</Fragment>
`;
